<resources>
    <string name="app_name">Colocviu1_1</string>
    <string name="north">NORTH</string>
    <string name="east">EAST</string>
    <string name="west">WEST</string>
    <string name="south">SOUTH</string>
    <string name="secondary_activity">NAVIGATE TO SECONDARY ACTIVITY</string>
    <string name="title_activity_colocviu11_secondary">Colocviu1_1SecondaryActivity</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="secondary_activity_zero">NAVIGATE TO SECONDARY ACTIVITY (RESTART)</string>

</resources>